WP8.1 project templates, changes to existing templates, updated installer

--- a/Projektimallit/WP8/PerusPeli_WP8/PerusPeliWP8.csproj
+++ b/Projektimallit/WP8/PerusPeli_WP8/PerusPeliWP8.csproj
@@ -139,7 +139,7 @@
   <ItemGroup>
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
     <Reference Include="Jypeli" />
-    <Reference Include="Jypeli.MonoGame.Framework" />
+    <Reference Include="MonoGame.Framework" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\$(TargetFrameworkIdentifier)\$(TargetFrameworkVersion)\Microsoft.$(TargetFrameworkIdentifier).$(TargetFrameworkVersion).Overrides.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\$(TargetFrameworkIdentifier)\$(TargetFrameworkVersion)\Microsoft.$(TargetFrameworkIdentifier).CSharp.targets" />
